# AMAS_JV

./: .gitignore
AMAS/: CMakeLists.txt  CMakePresets.json  VNA.MD  VNA_S11_EXPLANATION.MD  build_positioner_test.bat  build_visa_test.bat  calibration.txt  check.py  com_diagnostic.cpp  component_guide.txt  measurement_results_S11_rad_18_26.5ghz.csv  measurement_results_S21_rad_18_26.5ghz.csv  measurement_results_S21_rad_8_12ghz.csv  measurement_results_s11_12_18ghz.csv  measurement_results_s11_26.5_40ghz.csv  mobus.py  plot_s11.py  positioner_test.cpp  requiremenrts.md  visa_test.cpp
AMAS/Sessions/: New Session_session.txt  Session_001_session.txt
AMAS/simulated_runs/S11_Measurement_2026-07-07_13-27-13/: measurement_report.html  measurement_report.md  measurement_results.csv  session_metadata.txt
AMAS/src/: Application.cpp  Application.h  main.cpp  vna_connection_test.cpp
AMAS/src/controllers/: MeasurementController.cpp  MeasurementController.h
AMAS/src/core/config/: MeasurementProfile.h  MeasurementSession.h  SweepConfig.h
AMAS/src/core/control/: MeasurementController.cpp  MeasurementController.h
AMAS/src/core/log/: DataLogger.cpp  DataLogger.h  Logger.cpp  Logger.h
AMAS/src/core/positioner/: IPositionerDriver.h  MockPositionerDriver.cpp  MockPositionerDriver.h  TAP3001Driver.cpp
AMAS/src/core/visa/: VISASession.cpp  VISASession.h
AMAS/src/core/vna/: FieldFoxDriver.cpp  FieldFoxDriver.h  IVnaDriver.h  MeasurementProcessor.cpp  MeasurementProcessor.h  MockVnaDriver.cpp  MockVnaDriver.h
AMAS/src/gui/: DashboardPage.cpp  DashboardPage.h  DevicesPage.cpp  DevicesPage.h  HelpDialogs.cpp  HelpDialogs.h  MainWindow.cpp  MainWindow.h  MeasurementProgressPage.cpp  MeasurementProgressPage.h  MeasurementSetupPage.cpp  MeasurementSetupPage.h  ProfileManagerPage.cpp  ProfileManagerPage.h  ResultsPage.cpp  ResultsPage.h  SettingsPage.cpp  SettingsPage.h
AMAS/src/gui/framework/: ActionManager.cpp  ActionManager.h  CommandManager.cpp  CommandManager.h  SettingsManager.cpp  SettingsManager.h  WindowStateManager.cpp  WindowStateManager.h
AMAS/src/gui/presentation/: DashboardPresenter.cpp  DashboardPresenter.h  DevicesPresenter.cpp  DevicesPresenter.h  MeasurementPresenter.cpp  MeasurementPresenter.h  ProfilePresenter.cpp  ProfilePresenter.h  ProgressPresenter.cpp  ProgressPresenter.h  ResultsPresenter.cpp  ResultsPresenter.h  SetupPresenter.cpp  SetupPresenter.h
AMAS/src/gui/theme/: Colors.h  ThemeManager.cpp  ThemeManager.h
AMAS/src/gui/widgets/: DeviceStatusCard.cpp  DeviceStatusCard.h  LogConsoleWidget.cpp  LogConsoleWidget.h  MeasProfileCard.cpp  MeasProfileCard.h  MeasurementPlotWidget.cpp  MeasurementPlotWidget.h  NoWheelWidgets.h  PolarPlotWidget.cpp  PolarPlotWidget.h  QuickActionButton.cpp  QuickActionButton.h  RadiationPattern3DWidget.cpp  RadiationPattern3DWidget.h  SmithChartWidget.cpp  SmithChartWidget.h
AMAS/src/logger/: DataLogger.cpp  DataLogger.h
AMAS/src/measurement/: BandConfiguration.cpp  BandConfiguration.h  CalibrationManager.cpp  CalibrationManager.h  MeasurementProcessor.cpp  MeasurementProcessor.h  MeasurementProfile.cpp  MeasurementProfile.h  MeasurementSession.cpp  MeasurementSession.h
AMAS/src/reports/: ReportGenerator.cpp  ReportGenerator.h
AMAS/tests/: test_backend_modules.cpp  test_positioner_driver.cpp  test_vna_driver.cpp
